syntax = "proto3";

package g1.protocol;

// cmd = 0xXXYZZZ
// 其中XX为server_type, Y为cmd类型 ,0为客户端请求,1为内部请求,3为服务器向客户端的推送,4为Lua命令,A为GM指令

enum CMD
{
    _CMD_ZERO = 0;

// -------- ServerToClient --------


    // 强制下线
    SC_KICK_OUT = 0x003001;

    // 同步玩家数据
    SC_SYNC_USER_DATA = 0x003002;

    // 聊天信息推送
    SC_CHAT     = 0x003003;

    // 通知客户端数据有变动
    SC_DATA_CHANGE_NOTIFY = 0x003004;


// -------- connsvr(server_type = 1) --------

    CONN_KICK_OUT_REQ   = 0x011000;
    CONN_KICK_OUT_RSP   = 0x010001;

    CONN_BROADCAST_REQ  = 0x011002;
    CONN_BROADCAST_RSP  = 0x011003;


// -------- mainsvr(server_type = 2) --------

    // 登陆
    MAIN_LOGIN_REQ          = 0x020000;
    MAIN_LOGIN_RSP          = 0x020001;

    // 登出
    MAIN_LOGOUT_REQ         = 0x020002;
    MAIN_LOGOUT_RSP         = 0x020003;

    MAIN_HEARTBEAT_REQ      = 0x020004;
    MAIN_HEARTBEAT_RSP      = 0x020005;

    // 道具使用
    MAIN_ITEM_USE_REQ       = 0x020006;
    MAIN_ITEM_USE_RSP       = 0x020007;

    // 改名
    MAIN_CHANGE_NAME_REQ    = 0x020008;
    MAIN_CHANGE_NAME_RSP    = 0x020009;

    // 改头像
    MAIN_CHANGE_ICON_REQ    = 0x02000A;
    MAIN_CHANGE_ICON_RSP    = 0x02000B;

    // 消红点
    MAIN_TOUCH_RED_POINT_REQ= 0x02000C;
    MAIN_TOUCH_RED_POINT_RSP= 0x02000D;

    // 英雄道具使用
    MAIN_HERO_ITEM_USE_REQ  = 0x02000E;
    MAIN_HERO_ITEM_USE_RSP  = 0x02000F;

    // 英雄招募
    MAIN_HERO_RECRUIT_REQ   = 0x020010;
    MAIN_HERO_RECRUIT_RSP   = 0x020011;

    // 买招募券
    MAIN_BUY_HERO_RECRUIT_TICKET_REQ = 0x020012;
    MAIN_BUY_HERO_RECRUIT_TICKET_RSP = 0x020013;

    // 物品合成
    MAIN_ITEM_COMPOSE_REQ   = 0x020014;
    MAIN_ITEM_COMPOSE_RSP   = 0x020015;

    // 羁绊升级
    MAIN_CARD_COMBINE_LEVEL_UP_REQ  = 0x020016;
    MAIN_CARD_COMBINE_LEVEL_UP_RSP  = 0x020017;


    // ~~~~~~~~~~商城相关~~~~~~~~~~

    // 购买礼包
    MAIN_MALL_BUY_PACKAGE_REQ   = 0x0201B0;
    MAIN_MALL_BUY_PACKAGE_RSP   = 0x0201B1;

    // 充值
    MAIN_MALL_RECHARGE_REQ      = 0x0201B2;
    MAIN_MALL_RECHARGE_RSP      = 0x0201B3;



    // ~~~~~~~~~~主线任务相关~~~~~~~~~~

    // 完成主线任务
    MAIN_MAIN_TASK_FINISH_REQ       = 0x0201D0;
    MAIN_MAIN_TASK_FINISH_RSP       = 0x0201D1;



    // ~~~~~~~~~~~~引导功能~~~~~~~~~~~~~~~~~~
    // 发送已经完成的ID
    GUIDE_COMPLETED_REQ             = 0x020220;
    GUIDE_COMPLETED_RSP             = 0x020221;
    // 发送正在进行的ID
    GUIDE_IN_PROGRESS_REQ           = 0x020222;
    GUIDE_IN_PROGRESS_RSP           = 0x020223;

    //单个任务更新通知
    MAIN_ACTIVITY_TASK_SINGLE_UPDATE_NOTIFY     = 0x020249;

    //--------

    // ~~~~~~~~~~GM相关~~~~~~~~~~~~~

    // 设置角色信息
    MAIN_GM_GET_ROLE_REQ    = 0x02A000;
    MAIN_GM_GET_ROLE_RSP    = 0x02A001;

    MAIN_GM_SET_ROLE_REQ    = 0x02A002;
    MAIN_GM_SET_ROLE_RSP    = 0x02A003;

    MAIN_GM_ADD_ITEM_REQ    = 0x02A004;
    MAIN_GM_ADD_ITEM_RSP    = 0x02A005;



// -------- dbsvr(server_type = 3) --------

    DB_INNER_UID_GET_REQ     = 0x031000;
    DB_INNER_UID_GET_RSP     = 0x031001;

    DB_INNER_UID_SET_REQ     = 0x031002;
    DB_INNER_UID_SET_RSP     = 0x031003;

    DB_INNER_UID_MGET_REQ    = 0x031004;
    DB_INNER_UID_MGET_RSP    = 0x031005;

    DB_INNER_COMM_GET_REQ    = 0x031006;
    DB_INNER_COMM_GET_RSP    = 0x031007;

    DB_INNER_COMM_SET_REQ    = 0x031008;
    DB_INNER_COMM_SET_RSP    = 0x031009;

    DB_INNER_COMM_MGET_REQ   = 0x03100A;
    DB_INNER_COMM_MGET_RSP   = 0x03100B;

    DB_INNER_COMM_DEL_REQ    = 0x03100C;
    DB_INNER_COMM_DEL_RSP    = 0x03100D;

    DB_INNER_COMM_INCR_REQ   = 0x03100E;
    DB_INNER_COMM_INCR_RSP   = 0x03100F;

    DB_INNER_COMM_ZSET_SET_REQ = 0x031020;
    DB_INNER_COMM_ZSET_SET_RSP = 0x031021;

    DB_INNER_COMM_ZSET_GET_REQ = 0x031022;
    DB_INNER_COMM_ZSET_GET_RSP = 0x031023;

  // -------- mysqlsvr(server_type = 4) --------

  MYSQL_INNER_UPDATE_ROLE_INFO_REQ      = 0x041000;
  MYSQL_INNER_UPDATE_ROLE_INFO_RSP      = 0x041001;


  MYSQL_INNER_SEARCH_ROLE_REQ         = 0x041002;
  MYSQL_INNER_SEARCH_ROLE_RSP         = 0x041003;

  // 向数据库查询礼包码
  MYSQL_INNER_SEARCH_GIFT_CODE_REQ    = 0x041004;
  MYSQL_INNER_SEARCH_GIFT_CODE_RSP    = 0x041005;


    // 获取邮件
    MAIL_GET_MAIL_LIST_REQ      = 0x0A0000;
    MAIL_GET_MAIL_LIST_RSP      = 0x0A0001;

    // 阅读邮件
    MAIL_READ_MAIL_REQ          = 0x0A0002;
    MAIL_READ_MAIL_RSP          = 0x0A0003;

    // 删除邮件
    MAIL_DEL_MAIL_REQ           = 0x0A0004;
    MAIL_DEL_MAIL_RSP           = 0x0A0005;

    // 领取附件
    MAIL_GET_MAIL_ATTACH_REQ    = 0x0A0006;
    MAIL_GET_MAIL_ATTACH_RSP    = 0x0A0007;




    // 添加邮件
    MAIL_INNER_ADD_MAIL_REQ     = 0x0A1000;
    MAIL_INNER_ADD_MAIL_RSP     = 0x0A1001;

  // -------- infosvr(server_type = 7) --------

  INFO_GET_BRIEF_INFO_REQ = 0x070000;
  INFO_GET_BRIEF_INFO_RSP = 0x070001;

  INFO_GET_ICON_DESC_REQ  = 0x070002;
  INFO_GET_ICON_DESC_RSP  = 0x070003;


  INFO_INNER_SET_BRIEF_INFO_REQ = 0x071000;
  INFO_INNER_SET_BRIEF_INFO_RSP = 0x071001;




  // -------- chatsvr(server_type = 11) --------

    // 发送聊天
    CHAT_CHAT_REQ = 0x0B0000;
    CHAT_CHAT_RSP = 0x0B0001;

    // 获取聊天信息
    CHAT_GET_CHAT_INFO_REQ = 0x0B0002;
    CHAT_GET_CHAT_INFO_RSP = 0x0B0003;

    // 删除好友聊天数据
    CHAT_DEL_CHAT_REQ  = 0x0B0004;
    CHAT_DEL_CHAT_RSP  = 0x0B0005;


// -------- friendsvr(server_type = 12) --------

    // 获取社交信息
    FRIEND_GET_FRIEND_INFO_REQ  = 0x0C0000;
    FRIEND_GET_FRIEND_INFO_RSP  = 0x0C0001;

    // 添加好友
    FRIEND_ADD_FRIEND_REQ       = 0x0C0002;
    FRIEND_ADD_FRIEND_RSP       = 0x0C0003;

    // 确认添加好友
    FRIEND_CONFIRM_FRIEND_REQ   = 0x0C0004;
    FRIEND_CONFIRM_FRIEND_RSP   = 0x0C0005;

    // 屏蔽玩家
    FRIEND_SHIELD_USER_REQ   = 0x0C0006;
    FRIEND_SHIELD_USER_RSP   = 0x0C0007;

    // 搜索玩家
    FRIEND_SEARCH_ROLE_REQ     = 0x0C0008;
    FRIEND_SEARCH_ROLE_RSP     = 0x0C0009;

    //------------ inner cmd ---------------

    FRIEND_INNER_ADD_FRIEND_REQ         = 0x0C1000;
    FRIEND_INNER_ADD_FRIEND_RSP         = 0x0C1001;

    FRIEND_INNER_CONFIRM_FRIEND_REQ     = 0x0C1002;
    FRIEND_INNER_CONFIRM_FRIEND_RSP     = 0x0C1003;



}
